--- a/views/careers - bk.html
+++ b/views/careers - bk.html
@@ -102,10 +102,10 @@
                 <div class="col-md-5 offset-md-1 text-center">
                     <div class="row">
                         <div class="col-md">
-                            <a href="http://www.iitbook.in/" target="_blank"><img src="img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
+                            <a href="http://www.iitbook.in/" target="_blank"><img src="../img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
                         </div>
                         <div class="col-md">
-                            <a href="https://www.mbabook.in/" target="_blank"><img src="img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
+                            <a href="https://www.mbabook.in/" target="_blank"><img src="../img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
                         </div>
                     </div>
                 </div>
