--- a/views/home - bk.html
+++ b/views/home - bk.html
@@ -1,7 +1,7 @@
 ﻿<!-- Intro Section -->
 <section class="home-slider dark-bg" style="padding-top:64px;">
     <div class="owl-carousel fullwidth-slider white content-carousel content-slider o-flow-hidden">
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/data.jpg');">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/data.jpg');">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -13,7 +13,7 @@
             </div>
             <!-- End Content -->
         </div>
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/AI.jpg');">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/AI.jpg');">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -25,7 +25,7 @@
             </div>
             <!-- End Content -->
         </div>
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/BI.jpg')">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/BI.jpg')">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -37,7 +37,7 @@
             </div>
             <!-- End Content -->
         </div>
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/app.jpg');">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/app.jpg');">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -49,7 +49,7 @@
             </div>
             <!-- End Content -->
         </div>
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/cloud.jpg');">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/cloud.jpg');">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -61,7 +61,7 @@
             </div>
             <!-- End Content -->
         </div>
-        <div class="item bg-img parallax parallax-background1" style="background-image: url('img/Banners/collab.jpg');">
+        <div class="item bg-img parallax parallax-background1" style="background-image: url('../img/Banners/collab.jpg');">
             <!-- Content -->
             <div class="full-cap-wraper overlay-dark light-color ">
                 <div class="content-caption light-color">
@@ -138,7 +138,7 @@
 </section>
 <!-- End Service Section -->
 <!-- Counter Section -->
-<section id="counter" class="overlay-dark80 light-color ptb-80" style="background-image: url('img/Banners/stats.jpg');" data-stellar-background-ratio="0.5">
+<section id="counter" class="overlay-dark80 light-color ptb-80" style="background-image: url('../img/Banners/stats.jpg');" data-stellar-background-ratio="0.5">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-3 mb-sm-30">
@@ -174,82 +174,82 @@
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30 pb-15">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=1"><img id="newsimg1" class="item-container news-image" src="" alt="news" /></a>
+                        <a href="/news#?id=1"><img id="newsimg1" class="item-container news-image" src="" alt="news" /></a>
                     </div>
                     <div class="post-meta"> <span id="newsdate1"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=1" id="newstitle1">Title</a> </h5>
+                        <h5 class="newsItem"><a href="/news#?id=1" id="newstitle1">Title</a> </h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30 pb-15">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=2">
+                        <a href="/news#?id=2">
                             <img id="newsimg2" class="item-container news-image" src="" alt="news" />
                         </a>
                     </div>
                     <div class="post-meta"> <span id="newsdate2"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=2" id="newstitle2"></a> </h5>
+                        <h5 class="newsItem"><a href="/news#?id=2" id="newstitle2"></a> </h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30 pb-15">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=3">
+                        <a href="/news#?id=3">
                             <img id="newsimg3" class="item-container news-image" src="" alt="news" />
                         </a>
                     </div>
                     <div class="post-meta"> <span id="newsdate3"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=3" id="newstitle3"></a> </h5>
+                        <h5 class="newsItem"><a href="/news#?id=3" id="newstitle3"></a> </h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=4">
+                        <a href="/news#?id=4">
                             <img id="newsimg4" class="item-container news-image" src="" alt="news" />
                         </a>
                     </div>
                     <div class="post-meta"> <span id="newsdate4"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=4" id="newstitle4"></a> </h5>
+                        <h5 class="newsItem"><a href="/news#?id=4" id="newstitle4"></a> </h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=5">
+                        <a href="/news#?id=5">
                             <img id="newsimg5" class="item-container news-image" src="" alt="news" />
                         </a>
                     </div>
                     <div class="post-meta"> <span id="newsdate5"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=5" id="newstitle5"></a></h5>
+                        <h5 class="newsItem"><a href="/news#?id=5" id="newstitle5"></a></h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 mb-sm-30">
                 <div class="blog-post">
                     <div class="post-media news-image">
-                        <a href="/news?id=6">
+                        <a href="/news#?id=6">
                             <img id="newsimg6" class="item-container news-image" src="" alt="news" />
                         </a>
                     </div>
                     <div class="post-meta"> <span id="newsdate6"></span></div>
                     <div class="post-header">
-                        <h5 class="newsItem"><a href="/news?id=6" id="newstitle6"></a> </h5>
+                        <h5 class="newsItem"><a href="/news#?id=6" id="newstitle6"></a> </h5>
                     </div>
                 </div>
             </div>
 
         </div>
-        <h6><a href="/news" class="float-right float-none-xs">View All</a></h6>
+        <h6><a href="/news/#" class="float-right float-none-xs">View All</a></h6>
     </div>
 </section>
 <!-- End Blog Section -->
@@ -259,12 +259,12 @@
         <div class="owl-carousel client-carousel nf-carousel-theme">
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/microsoft.png" alt="Microsoft" />
+                    <img src="../img/sponsors/microsoft.png" alt="Microsoft" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/amazon.png" alt="Amazon" />
+                    <img src="../img/sponsors/amazon.png" alt="Amazon" />
                 </div>
             </div>
             <!--<div class="item">
@@ -274,32 +274,32 @@
             </div>-->
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/google.png" alt="Google" />
+                    <img src="../img/sponsors/google.png" alt="Google" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/starbucks.png" alt="Starbucks" />
+                    <img src="../img/sponsors/starbucks.png" alt="Starbucks" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/devon.png" alt="Devon" />
+                    <img src="../img/sponsors/devon.png" alt="Devon" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/t-mobile.png" alt="T-mobile" />
+                    <img src="../img/sponsors/t-mobile.png" alt="T-mobile" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/vca.png" alt="VCA" />
+                    <img src="../img/sponsors/vca.png" alt="VCA" />
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img src="img/sponsors/wunderman.png" alt="Wunderman" />
+                    <img src="../img/sponsors/wunderman.png" alt="Wunderman" />
                 </div>
             </div>
             <!--
