--- a/views/powerbi - bk.html
+++ b/views/powerbi - bk.html
@@ -774,7 +774,7 @@
                 </div>
             </div>
         </div>
-        <h6 class="text-right pt-30"><a href="/expertise/powerbiviewall">View All</a></h6>
+        <h6 class="text-right pt-30"><a href="/expertise/powerbiviewall/#">View All</a></h6>
     </div>
 </section>
 <section id="tech-logos" class="wow fadeIn pb-90 pb-sm-80">
