updated image path

--- a/views/appdevelopment.html
+++ b/views/appdevelopment.html
@@ -1,5 +1,5 @@
 ﻿         <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 appdevelopmentposter" data-background-img="../img/Banners/app.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 appdevelopmentposter" data-background-img="/img/Banners/app.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">App Development</h2>
@@ -123,27 +123,27 @@
         <div class="owl-carousel ai-carousel nf-carousel-theme ">
             <div class="item">
                 <div class="client-logo">
-                    <img title="Google Play" src="../img/App Development/Slider/googleplay.png" alt="Google Play" /></a>
+                    <img title="Google Play" src="/img/App Development/Slider/googleplay.png" alt="Google Play" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="IOS" src="../img/App Development/Slider/ios.png" alt="IOS" /></a>
+                    <img title="IOS" src="/img/App Development/Slider/ios.png" alt="IOS" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="NodeJS" src="../img/App Development/Slider/nodejs.png" alt="NodeJS" /></a>
+                    <img title="NodeJS" src="/img/App Development/Slider/nodejs.png" alt="NodeJS" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Office" src="../img/App Development/Slider/office.png" alt="Office" /></a>
+                    <img title="Office" src="/img/App Development/Slider/office.png" alt="Office" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Typescript" src="../img/App Development/Slider/typescript.png" alt="Typescript" /></a>
+                    <img title="Typescript" src="/img/App Development/Slider/typescript.png" alt="Typescript" /></a>
                 </div>
             </div>
         </div>
