--- a/views/datamanagement.html
+++ b/views/datamanagement.html
@@ -1,5 +1,5 @@
 ﻿<!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 datamanagementposter" data-background-img="../img/Banners/data.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 datamanagementposter" data-background-img="/img/Banners/data.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">Data Management</h2>
@@ -272,28 +272,28 @@
         <div class="owl-carousel ai-carousel nf-carousel-theme ">
             <div class="item">
                 <div class="client-logo">
-                    <img title="SQL Server Business Intelligence" src="../img/datamanagement/sqlserver.png" alt="SQL Server Business Intelligence" /></a>
+                    <img title="SQL Server Business Intelligence" src="/img/datamanagement/sqlserver.png" alt="SQL Server Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Azure Cosmos DB" src="../img/datamanagement/cosmos.png" alt="Azure Cosmos DB" /></a>
+                    <img title="Azure Cosmos DB" src="/img/datamanagement/cosmos.png" alt="Azure Cosmos DB" /></a>
                 </div>
             </div>
             
             <div class="item">
                 <div class="client-logo">
-                    <img title="Amazon Redshift Business Intelligence" src="../img/datamanagement/redshift.png" alt="Amazon Redshift Business Intelligence" /></a>
+                    <img title="Amazon Redshift Business Intelligence" src="/img/datamanagement/redshift.png" alt="Amazon Redshift Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Oracle Business Intelligence" src="../img/datamanagement/oracle.png" alt="Oracle Business Intelligence" /></a>
+                    <img title="Oracle Business Intelligence" src="/img/datamanagement/oracle.png" alt="Oracle Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="MySQL Business Intelligence" src="../img/datamanagement/mysql.png" alt="MySQL Business Intelligence" /></a>
+                    <img title="MySQL Business Intelligence" src="/img/datamanagement/mysql.png" alt="MySQL Business Intelligence" /></a>
                 </div>
             </div>
         </div>
