--- a/views/news.html
+++ b/views/news.html
@@ -1,5 +1,5 @@
 ﻿<!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 newsposter" data-background-img="img/Banners/news.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 newsposter" data-background-img="/img/Banners/news.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">News</h2>
@@ -152,7 +152,7 @@
                     <hr>
                     <ul>
                         <li>
-                            <img class="newsPic" title="Inc." alt="Inc." src="img/news/inclogoclear.png">
+                            <img class="newsPic" title="Inc." alt="Inc." src="/img/news/inclogoclear.png">
                         </li>
                         </br>
                         <li>
@@ -162,7 +162,7 @@
                         </li>
                         </br>
                         <li>
-                            <img class="newsPic" alt="The Seattle Times" title="The Seattle Times" src="img/news/seattleTimes.png">
+                            <img class="newsPic" alt="The Seattle Times" title="The Seattle Times" src="/img/news/seattleTimes.png">
                         </li>
                         </br>
                         <li>
@@ -179,7 +179,7 @@
                         </li>
                         <br />
                         <li>
-                            <img class="newsPic" src="img/news/psbj.png">
+                            <img class="newsPic" src="/img/news/psbj.png">
                         </li>
                         </br>
                         <li>
@@ -202,7 +202,7 @@
                         </li>
                         <br />
                         <li>
-                            <img alt="BBC News" title="BBC News" class="newsPic" src="img/news/bbcnews.png">
+                            <img alt="BBC News" title="BBC News" class="newsPic" src="/img/news/bbcnews.png">
                         </li>
                         </br>
                         <li>
