--- a/css/style.css
+++ b/css/style.css
@@ -3157,123 +3157,123 @@ header.header-dark.header-prepare .side-menu-btn ul li a {
 }
 
 .bg-img1 {
-    background-image: url("../img/full/01.jpg");
+    background-image: url("/img/full/01.jpg");
 }
 
 .bg-img2 {
-    background-image: url("../img/full/02.jpg");
+    background-image: url("/img/full/02.jpg");
 }
 
 .bg-img3 {
-    background-image: url("../img/full/03.jpg");
+    background-image: url("/img/full/03.jpg");
 }
 
 .bg-img4 {
-    background-image: url("../img/full/04.jpg");
+    background-image: url("/img/full/04.jpg");
 }
 
 .bg-img5 {
-    background-image: url("../img/full/05.jpg");
+    background-image: url("/img/full/05.jpg");
 }
 
 .bg-img6 {
-    background-image: url("../img/full/06.jpg");
+    background-image: url("/img/full/06.jpg");
 }
 
 .bg-img7 {
-    background-image: url("../img/full/07.jpg");
+    background-image: url("/img/full/07.jpg");
 }
 
 .bg-img8 {
-    background-image: url("../img/full/08.jpg");
+    background-image: url("/img/full/08.jpg");
 }
 
 .bg-img9 {
-    background-image: url("../img/full/09.jpg");
+    background-image: url("/img/full/09.jpg");
 }
 
 .bg-img10 {
-    background-image: url("../img/full/10.jpg");
+    background-image: url("/img/full/10.jpg");
 }
 
 .bg-img11 {
-    background-image: url("../img/full/11.jpg");
+    background-image: url("/img/full/11.jpg");
 }
 
 .bg-img12 {
-    background-image: url("../img/full/12.jpg");
+    background-image: url("/img/full/12.jpg");
 }
 
 .bg-img13 {
-    background-image: url("../img/full/13.jpg");
+    background-image: url("/img/full/13.jpg");
 }
 
 .bg-img14 {
-    background-image: url("../img/full/14.jpg");
+    background-image: url("/img/full/14.jpg");
 }
 
 .bg-img15 {
-    background-image: url("../img/full/15.jpg");
+    background-image: url("/img/full/15.jpg");
 }
 
 .bg-img16 {
-    background-image: url("../img/full/16.jpg");
+    background-image: url("/img/full/16.jpg");
 }
 
 .bg-img17 {
-    background-image: url("../img/full/17.jpg");
+    background-image: url("/img/full/17.jpg");
 }
 
 .bg-img18 {
-    background-image: url("../img/full/18.jpg");
+    background-image: url("/img/full/18.jpg");
 }
 
 .bg-img19 {
-    background-image: url("../img/full/19.jpg");
+    background-image: url("/img/full/19.jpg");
 }
 
 .bg-img20 {
-    background-image: url("../img/full/20.jpg");
+    background-image: url("/img/full/20.jpg");
 }
 
 .bg-img21 {
-    background-image: url("../img/full/21.jpg");
+    background-image: url("/img/full/21.jpg");
 }
 
 .bg-img22 {
-    background-image: url("../img/full/22.jpg");
+    background-image: url("/img/full/22.jpg");
 }
 
 .bg-img23 {
-    background-image: url("../img/full/23.jpg");
+    background-image: url("/img/full/23.jpg");
 }
 
 .bg-img24 {
-    background-image: url("../img/full/24.jpg");
+    background-image: url("/img/full/24.jpg");
 }
 
 .bg-img25 {
-    background-image: url("../img/full/25.jpg");
+    background-image: url("/img/full/25.jpg");
 }
 
 .bg-img26 {
-    background-image: url("../img/full/26.jpg");
+    background-image: url("/img/full/26.jpg");
 }
 
 .bg-img27 {
-    background-image: url("../img/full/27.jpg");
+    background-image: url("/img/full/27.jpg");
 }
 
 .bg-img28 {
-    background-image: url("../img/full/28.jpg");
+    background-image: url("/img/full/28.jpg");
 }
 
 .bg-img29 {
-    background-image: url("../img/full/29.jpg");
+    background-image: url("/img/full/29.jpg");
 }
 
 .bg-img30 {
-    background-image: url("../img/full/30.jpg");
+    background-image: url("/img/full/30.jpg");
 }
 
 .border-b-box {
@@ -4809,7 +4809,7 @@ ul.project-detail-block, .project-detail-block ul {
     }
 
         #preloader .loader .loader-img {
-            background: url("../img/loading.GIF");
+            background: url("/img/loading.GIF");
             width: 60px;
             height: 60px;
             display: block;
@@ -5048,7 +5048,7 @@ ul.project-detail-block, .project-detail-block ul {
 }
 
 .Loading {
-    background: url(../img/loading.GIF) no-repeat center center;
+    background: url(/img/loading.GIF) no-repeat center center;
 }
 
 #LoadPageNews {
