--- a/views/careers.html
+++ b/views/careers.html
@@ -2,7 +2,7 @@
 <!-- Intro Video Section -->
 <!--<div id="video" class="ytp-player" data-property="{videoURL:'https://www.youtube.com/v/mgyfCETF1lA',containment:'#intro', showControls:true, autoPlay:true, loop:true, mute:true, startAt:1, opacity:1, addRaster:false, quality:'default'}"></div>
 -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="../img/Banners/career.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="/img/Banners/career.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">Careers</h2>
@@ -102,10 +102,10 @@
                 <div class="col-md-5 offset-md-1 text-center">
                     <div class="row">
                         <div class="col-md">
-                            <a href="http://www.iitbook.in/" target="_blank"><img src="img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
+                            <a href="http://www.iitbook.in/" target="_blank"><img src="/img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
                         </div>
                         <div class="col-md">
-                            <a href="https://www.mbabook.in/" target="_blank"><img src="img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
+                            <a href="https://www.mbabook.in/" target="_blank"><img src="/img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
                         </div>
                     </div>
                 </div>
