--- a/views/collaborationcontent.html
+++ b/views/collaborationcontent.html
@@ -1,5 +1,5 @@
 ﻿<!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 collaborationcontentposter" data-background-img="../img/Banners/collab.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 collaborationcontentposter" data-background-img="/img/Banners/collab.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">Collaboration & Content</h2>
@@ -159,17 +159,17 @@
     <div class="container text-center">
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Office 365" src="../img/collaborationContent/Slider/office365.png" alt="Office365" /></a>
+                    <img title="Office 365" src="/img/collaborationContent/Slider/office365.png" alt="Office365" /></a>
                 </div>
             </div>
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Sharepoint" src="../img/collaborationContent/Slider/sharepoint.png" alt="Sharepoint" /></a>
+                    <img title="Sharepoint" src="/img/collaborationContent/Slider/sharepoint.png" alt="Sharepoint" /></a>
                 </div>
             </div>
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Sharepoint Online" src="../img/collaborationContent/Slider/sharepoint-online.png" alt="Sharepoint Online" /></a>
+                    <img title="Sharepoint Online" src="/img/collaborationContent/Slider/sharepoint-online.png" alt="Sharepoint Online" /></a>
                 </div>
             </div>
             
