--- a/views/recognitions.html
+++ b/views/recognitions.html
@@ -1,5 +1,5 @@
 ﻿<!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 recognitionsposter" data-background-img="../img/Banners/recognition.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 recognitionsposter" data-background-img="/img/Banners/recognition.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">Recognitions</h2>
@@ -15,7 +15,7 @@
             <div class="col-md-12 col-sm-12" id="DataSection">
                 <div class="row">
                     <div class="col-md-3 RecognitionImage">
-                        <a href="http://www.inc.com/profile/maq-software" target="_blank"><img src="../img/Recognition/inc5000.jpg" alt="Inc. 5000, Fastest Growing Companies in America, 2007-2012" title="Inc. 5000, Fastest Growing Companies in America, 2007-2015"></a>
+                        <a href="http://www.inc.com/profile/maq-software" target="_blank"><img src="/img/Recognition/inc5000.jpg" alt="Inc. 5000, Fastest Growing Companies in America, 2007-2012" title="Inc. 5000, Fastest Growing Companies in America, 2007-2015"></a>
                     </div>    
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f">Nine Time Honoree, <i class="SemiBold">Inc. 5000</i>, Fastest Growing Companies in America</p>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row pt-45">
                     <div class="col-md-3 RecognitionImage">
-                        <a class="mb-10" href="http://www.bsigroup.com/en-IN/Our-services/Certification/Certificate-and-Client-Directory-search/Certificate-Client-Directory-search-results/?searchkey=company%3dMAQ&amp;licencenumber=IS%20592346" target="_blank"><img  src="../img/Recognition/bsi.jpg" alt="ISO 27001:2013 – Information Security, 2015" title="ISO 27001:2013 – Information Security, 2015"></a>
+                        <a class="mb-10" href="http://www.bsigroup.com/en-IN/Our-services/Certification/Certificate-and-Client-Directory-search/Certificate-Client-Directory-search-results/?searchkey=company%3dMAQ&amp;licencenumber=IS%20592346" target="_blank"><img  src="/img/Recognition/bsi.jpg" alt="ISO 27001:2013 – Information Security, 2015" title="ISO 27001:2013 – Information Security, 2015"></a>
                     </div>
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f">ISO 27001:2013 – Information Security</p>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row pt-45">
                         <div class="col-md-3 RecognitionImage">
-                            <a class="mb-10" href="https://pinpoint.microsoft.com/en-us/companies/4295523993" target="_blank"><img  src="../img/Recognition/Partner.png" alt="Microsoft Partner" title="Microsoft Gold Partner for Data Analytics, Data Platform, and Application Development"></a>
+                            <a class="mb-10" href="https://pinpoint.microsoft.com/en-us/companies/4295523993" target="_blank"><img  src="/img/Recognition/Partner.png" alt="Microsoft Partner" title="Microsoft Gold Partner for Data Analytics, Data Platform, and Application Development"></a>
                         </div>
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f">Microsoft Gold Partner</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="row pt-45">
                     <div class="col-md-3 RecognitionImage">                        
-                            <a class="mb-10"href="http://www.aws-partner-directory.com/PartnerDirectory/PartnerDetail?Name=MAQ+LLC+dba+MAQ+Software" target="_blank"><img  src="../img/Recognition/Amazon_Partner.png" alt="Amazon Consulting Partner" title="Amazon Consulting Partner"></a>
+                            <a class="mb-10"href="http://www.aws-partner-directory.com/PartnerDirectory/PartnerDetail?Name=MAQ+LLC+dba+MAQ+Software" target="_blank"><img  src="/img/Recognition/Amazon_Partner.png" alt="Amazon Consulting Partner" title="Amazon Consulting Partner"></a>
                         </div>
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f">Amazon Consulting Partner</p>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="row pt-45">
                     <div class="col-md-3 RecognitionImage">                        
-                        <a class="mb-10" href="https://www.microsoft.com/en-us/procurement/msp-overview.aspx" target="_blank"><img  src="../img/Recognition/MSPreferred.png" alt="Microsoft Preferred Supplier, Since 2005" title="Microsoft Preferred Supplier, Since 2005"></a>
+                        <a class="mb-10" href="https://www.microsoft.com/en-us/procurement/msp-overview.aspx" target="_blank"><img  src="/img/Recognition/MSPreferred.png" alt="Microsoft Preferred Supplier, Since 2005" title="Microsoft Preferred Supplier, Since 2005"></a>
                     </div>
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f">Microsoft Preferred Supplier</p>
@@ -79,7 +79,7 @@
                 
                 <div class="row pt-45">
                     <div class="col-md-3 RecognitionImage">
-                        <a  href="http://www.bizjournals.com/seattle/stories/2009/10/19/focus2.html" target="_blank"><img  src="../img/Recognition/FastestGrowing.png" alt="Puget Sound Business" title="Puget Sound Business Journal's 100 Fastest-Growing Private Companies in Washington State"></a>
+                        <a  href="http://www.bizjournals.com/seattle/stories/2009/10/19/focus2.html" target="_blank"><img  src="/img/Recognition/FastestGrowing.png" alt="Puget Sound Business" title="Puget Sound Business Journal's 100 Fastest-Growing Private Companies in Washington State"></a>
                     </div>
                     <div class="col-md-9 RecognitionContent">
                         <p class="SemiBold Color3f3f3f"><i class="SemiBold">Puget Sound Business Journal's</i> 100 Fastest-Growing Private Companies in Washington State</p>
