--- a/css/style.css
+++ b/css/style.css
@@ -3785,6 +3785,9 @@ header.header-dark.header-prepare .side-menu-btn ul li a {
         .item-box:hover .item-mask .item-caption {
             bottom: 30px;
             opacity: 1;
+            /*position: relative;
+            top: 50%;
+            transform: translateY(-50%);*/
         }
 
     .item-box:hover .item-container {
@@ -5003,6 +5006,10 @@ ul.project-detail-block, .project-detail-block ul {
     font-weight: 500 !important;
 }
 
+.SemiBold-600 {
+    font-weight: 600 !important;
+}
+
 .topBorder {
     border-top: 1px solid #dddddd;
     padding-top: 13px;
@@ -5411,13 +5418,6 @@ ul.nav-tabs {
 #client-logos .owl-carousel .owl-item, #tech-logos .owl-carousel .owl-item {
     max-width: 90vw !important;
 }
-
-#client-logos .owl-carousel .owl-stage-outer {
-    margin-left: 35px;
-    margin-right: 35px;
-}
-
-
 
 .map-marker-label {
     position: absolute;
