--- a/css/style.css
+++ b/css/style.css
@@ -4040,6 +4040,7 @@ ul.project-detail-block, .project-detail-block ul {
 
     .blog-post .social-media-share .share-button, .social-media-share .twitter-share-button {
         margin-right: 5px;
+        float: left;
     }
 
     .blog-post .post-entry {
