Updated icons for share button

--- a/css/style.css
+++ b/css/style.css
@@ -4040,7 +4040,6 @@ ul.project-detail-block, .project-detail-block ul {
 
     .blog-post .social-media-share .share-button, .social-media-share .twitter-share-button {
         margin-right: 5px;
-        float: left;
     }
 
     .blog-post .post-entry {
@@ -5508,4 +5507,219 @@ ul.nav-tabs {
 }
 .item-mask>.item-caption{
     padding-top:20%;
+}
+
+.chrome ._2tga._49ve {
+    padding-bottom: 1px;
+}
+
+._2tga._49ve {
+    border-radius: 3px;
+    font-size: 11px;
+    height: 20px;
+    padding: 0 0 0 2px;
+}
+
+
+.pluginFontHelvetica, .pluginFontHelvetica button, .pluginFontHelvetica input, .pluginFontHelvetica label, .pluginFontHelvetica select, .pluginFontHelvetica td, .pluginFontHelvetica textarea {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.plugin, .plugin button, .plugin input, .plugin label, .plugin select, .plugin td, .plugin textarea {
+    font-size: 11px;
+}
+
+.inlineBlock {
+    display: inline-block;
+    zoom: 1;
+}
+
+._2tga {
+    background: #4267b2;
+    border: 1px solid #4267b2;
+    color: #fff;
+    cursor: pointer;
+    font-family: Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    margin: 0;
+    -webkit-user-select: none;
+    white-space: nowrap;
+}
+._3jn- {
+    /*height: 16px;*/
+    vertical-align: middle;
+    width: 16px;
+}
+
+._3jn_ {
+    background: none;
+    display: none;
+    height: 28px;
+    left: -6px;
+    position: absolute;
+    top: -6px;
+    width: 28px;
+}
+
+._49vg, ._5n2y {
+    vertical-align: middle;
+}
+
+._2tga ._1pbq {
+    height: 16px;
+    width: 16px;
+}
+
+svg[Attributes Style] {
+    color: rgb(255, 255, 255);
+}
+svg:not(:root), symbol, image, marker, pattern, foreignObject {
+    overflow: hidden;
+}
+html * > svg {
+    transform-origin: 50% 50% 0px;
+}
+._2tga ._1pbs {
+    display: none;
+}
+
+
+#facebook ._2tga span._49vh, #facebook ._2tga span._5n6h, ._49vh, ._5n6h {
+    font-family: Helvetica, Arial, sans-serif;
+    vertical-align: middle;
+}
+
+._2pi7 {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+._49vh {
+    font-weight: bold;
+}
+
+.li_ui_li_gen_1515155391781_0 {
+    position: relative !important;
+    overflow: visible !important;
+    /*display: block !important;*/
+}
+
+.li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link:link, .li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link:visited, .li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link:hover, .li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link:active {
+    border: 0 !important;
+    text-decoration: none !important;
+}
+
+.li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link {
+    border: 0 !important;
+    height: 20px !important;
+    text-decoration: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    display: inline-block !important;
+}
+
+.li_ui_li_gen_1515155391781_0 .li_ui_li_gen_1515155391781_0-logo {
+    background-image: url(https://static.licdn.com/scds/common/u/images/apps/connect/sprites/sprite_connect_v14.png) !important;
+    background-position: 0px -593px !important;
+    background-repeat: no-repeat !important;
+    background-color: #0077b5 !important;
+    background-size: initial !important;
+    cursor: pointer !important;
+    border: 0 !important;
+    border-right: 1px solid #066094 !important;
+    text-indent: -9999em !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    position: absolute !important;
+    left: 0px !important;
+    top: 0px !important;
+    display: block !important;
+    width: 20px !important;
+    height: 20px !important;
+    float: right !important;
+    border-radius: 2px !important;
+    -webkit-border-radius: 2px !important;
+    border-top-right-radius: 2px !important;
+    border-bottom-right-radius: 2px !important;
+    -webkit-border-top-right-radius: 2px !important;
+    -webkit-border-bottom-right-radius: 2px !important;
+}
+
+.li_ui_li_gen_1515155391781_0 .li_ui_li_gen_1515155391781_0-title {
+    color: #fff !important;
+    cursor: pointer !important;
+    display: block !important;
+    white-space: nowrap !important;
+    float: left !important;
+    margin-left: 1px !important;
+    vertical-align: top !important;
+    overflow: hidden !important;
+    text-align: center !important;
+    height: 18px !important;
+    padding: 0 4px 0 23px !important;
+    border: 1px solid #000 !important;
+    border-top-color: #0077b5 !important;
+    border-right-color: #0077b5 !important;
+    border-bottom-color: #0077b5 !important;
+    border-left-color: #0077b5 !important;
+    text-shadow: 0 -1px #005887 !important;
+    line-height: 20px !important;
+    border-radius: 2px !important;
+    -webkit-border-radius: 2px !important;
+    border-top-right-radius: 2px !important;
+    border-bottom-right-radius: 2px !important;
+    -webkit-border-top-right-radius: 2px !important;
+    -webkit-border-bottom-right-radius: 2px !important;
+    background-color: #0077b5 !important;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0077b5), color-stop(100%,#0077b5)) !important;
+    background-image: -webkit-linear-gradient(top, #0077b5 0%, #0077b5 100%) !important;
+}
+
+.li_ui_li_gen_1515155391781_0 .li_ui_li_gen_1515155391781_0-title .li_ui_li_gen_1515155391781_0-mark {
+    display: inline-block !important;
+    width: 0px !important;
+    overflow: hidden !important;
+}
+
+
+.li_ui_li_gen_1515155391781_0 span {
+    -webkit-box-sizing: content-box !important;
+    -moz-box-sizing: content-box !important;
+    box-sizing: content-box !important;
+}
+.li_ui_li_gen_1515155391781_0 span {
+    -webkit-box-sizing: content-box !important;
+    -moz-box-sizing: content-box !important;
+    box-sizing: content-box !important;
+}
+
+.li_ui_li_gen_1515155391781_0 .li_ui_li_gen_1515155391781_0-title-text, .li_ui_li_gen_1515155391781_0 .li_ui_li_gen_1515155391781_0-title-text * {
+    color: #fff !important;
+    font-size: 11px !important;
+    font-family: Arial, sans-serif !important;
+    font-weight: bold !important;
+    font-style: normal !important;
+    -webkit-font-smoothing: antialiased !important;
+    display: inline-block !important;
+    background: transparent none !important;
+    vertical-align: top !important;
+    height: 18px !important;
+    line-height: 20px !important;
+    float: none !important;
+}
+
+.li_ui_li_gen_1515155391781_0 span {
+    -webkit-box-sizing: content-box !important;
+    -moz-box-sizing: content-box !important;
+    box-sizing: content-box !important;
+}
+
+.li_ui_li_gen_1515155391781_0 a.li_ui_li_gen_1515155391781_0-link:after {
+    content: "." !important;
+    display: block !important;
+    clear: both !important;
+    visibility: hidden !important;
+    line-height: 0 !important;
+    height: 0 !important;
 }
